app: truncate and add "..." for long nav context to avoid unsightly wrapping on long screens

--- a/app/web_modules/sourcegraph/repo/styles/Repo.css
+++ b/app/web_modules/sourcegraph/repo/styles/Repo.css
@@ -11,6 +11,14 @@
 	composes: b db mr3 from base;
 }
 
+/* Hide filename on narrow screens. */
+@media screen and (max-width: 48em) {
+	.repo-nav-context {
+		overflow: hidden;
+		text-overflow: ellipsis;
+	}
+}
+
 .container {
 	composes: pt6 from base;
 }
